--- a/views/characters/boba_fett.html
+++ b/views/characters/boba_fett.html
@@ -21,7 +21,7 @@
                     <p>Boba Fett est un personnage de la saga cinématographique Star Wars.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/boba_fett.webp" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -60,7 +60,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster2.jpg" alt="">
                 <p>Boba Fett est le clone de <a href="../characters/jango_fett.html">Jango Fett</a> qu'il a conservé auprès de lui comme son fils, parmi les
                     milliers d'autres clones réalisés à son image sur la planète <a href="../planets/kamino.html">Kamino</a>
                     et qui vont intervenir dans l'épisode II de la saga Star Wars, <a href="../movies/movie2.html">l'Attaque des clones</a>. Devenu adulte,
