--- a/views/characters/boss_nass.html
+++ b/views/characters/boss_nass.html
@@ -24,7 +24,7 @@
                         tête de son peuple.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/rugor_nass.webp" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -64,7 +64,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>Contrairement à d’autres Boss Gungans, Nass pouvait se montrer très indulgent. Il pardonna plusieurs
                     écarts de conduite au maladroit <a href="../characters/jar_jar_bink.html">Jar Jar Binks</a> avant qu’un énième incident ne mette un terme à sa
                     patience pour le malheureux Gungan et qu’il le condamne à quitter la cité.</p>
