--- a/views/characters/c-3po.html
+++ b/views/characters/c-3po.html
@@ -28,7 +28,7 @@
 						lorsqu'il entra au service de la sénatrice <a href="../characters/padme_amidala.html">Padmé Amidala</a>.</p>
 				</div>
 				<div class="presentoir">
-					<img src="" alt="">
+					<img src="../../images/characters/c3po.jpg" alt="">
 					<table>
 						<tr>
 							<th>Apparait dans:</th>
@@ -68,7 +68,7 @@
 			<div class="relations">
 				<hr>
 				<h2>Rôle dans l'histoire</h2>
-				<img src="" alt="">
+				<img src="../../images/movies/poster1.jpg" alt="">
 				<p>Des années après, lorsque le Tantive IV fut attaqué par <a href="../corporations/empire_galactique.html">l'Empire Galactique</a> et que Antilles fut tué
 					par Dark Vador, C-3PO fuit avec <a href="../characters/r2-d2.html">R2-D2</a> dans une capsule de sauvetage qui s'écrasa sur <a href="../planets/tatooine.html">Tatooine</a>.
 					Sur <a href="../planets/tatooine.html">Tatooine</a>, les deux droïdes furent récupérés par des Jawas et furent mis en vente. Ils furent
