--- a/views/characters/compte_dooku.html
+++ b/views/characters/compte_dooku.html
@@ -19,7 +19,7 @@
                         <p>Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la <a href="../index.html">prélogie</a>. Il apparait dans les films <a href="../movies/movie2.html">L'Attaque des Clones</a> (2002) et <a href="../movies/movie3.html">La Revanche des Sith</a> (2005). Dooku est un Seigneur <a href="../corporations/sith.html">Sith</a> et le commandant suprême de la <a href="../corporations/conseil_separatiste.html">Confédération des systèmes indépendants</a>.</p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/compte_dooku.webp" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
@@ -59,7 +59,7 @@
                 <div class="relations">
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/characters/compte_dooku.webp" alt="">
                         <p>Brillant chevalier Jedi : <br>
                         Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la <a href="../index.html">prélogie</a>. Il apparait dans les films <a href="../movies/movie2.html">L'Attaque des Clones</a> (2002) et <a href="../corporations/sith.html">La Revanche des Sith</a> (2005). Dooku est un Seigneur Sith et le commandant suprême de la <a href="../corporations/conseil_separatiste.html">Confédération des systèmes indépendants</a>.</p>
                         <p> Le Sith : <br>
