--- a/views/characters/dexter_jettster.html
+++ b/views/characters/dexter_jettster.html
@@ -20,7 +20,7 @@
                         Ayant un passé très divers, soit donc une grande expérience et une grande culture, le <a href="../corporations/jedi.html">Jedi</a> <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> a souvent eu besoin de lui pour avoir des informations.</p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/dexterjettster.jpg" alt="">
                         <table>
 							<tr>
 								<th>Apparaît dans :</th>
@@ -60,7 +60,7 @@
                 <div class="relations">
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
 					<p>Dexter a indirectement joué un grand rôle dans la Guerre des Clones, en indiquant à <a href="../characters/obi-wan_kenobi.html">Obi-Wan</a> que la pointe empoisonnée (Kamino Saberdart) envoyée par <a href="../characters/jango_fett.html">Jango Fett</a> sur la chasseuse de primes <a href="../characters/zam_wesell.html">Zam Wesell</a> provenait de <a href="../planets/kamino.html">Kamino</a>.</p>    
 					<p></p> 
                 </div>
