--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -54,43 +54,43 @@
 
             <div class="valorum card"><a href="#"><img
                         src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="">
-                </a><p>valorum</p></div>
+               <p>valorum</p> </a></div>
 
             <div class="gunray card"><a href="#"><img
                         src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="">
-                </a><p>nute gunray</p></div>
+                <p>nute gunray</p></a></div>
 
             <div class="qui card"><a href="#"><img
                     src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="">
-                </a><p>qui gon jinn</p></div>
+               <p>qui gon jinn</p> </a></div>
 
             <div class="boss card"><a href="#"><img
                         src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="">
-                </a><p>boss nas</p></div>
+                <p>boss nas</p></a></div>
 
             <div class="jar card"><a href="#"><img
                         src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="">
-                </a><p>Jar jar bink</p></div>
+                <p>Jar jar bink</p></a></div>
 
             <div class="ki card"><a href="#"><img
                     src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="">
-            </a><p>ki di mundi</p></div>
+            <p>ki di mundi</p</a>></div>
 
             <div class="yoda  card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
-                </a><p>Yoda</p></div>
+                <p>Yoda</p></a></div>
 
             <div class="dark card"><a href="#"><img
                         src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="">
-                </a><p>Dark maul</p></div>
+               <p>Dark maul</p> </a></div>
 
             <div class="shmi card"><a href="#"><img
                         src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="">
-                </a><p>shmi skywalker</p></div>
+                <p>shmi skywalker</p></a></div>
 
             <div class="watto card"><a href="#"><img
                         src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="">
-                </a></div>
+               <p>watto</p> </a></div>
 
             <div class="sio card"><a href="#"><img
                         src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
@@ -98,15 +98,15 @@
 
             <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                </a><p>C3po</p></div>
+                <p>C3po</p></a></div>
 
             <div class="r2d2" card><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                </a><p>R2d2</p></div>
+                <p>R2d2</p></a></div>
 
             <div class="tanaka card"><a href=""><img
                         src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="">
-                </a><p>Captain tanaka</p></div>
+                <p>Captain tanaka</p></a></div>
 
         </div>
 
@@ -117,27 +117,27 @@
 
             <div class="compte card"><a href="#"><img
                         src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="">
-                </a><p>compte doku</p></div>
+                <p>compte doku</p></a></div>
 
             <div class="zam card"><a href="#"><img
                         src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="">
-                </a><p>Zam wesell</p></div>
+                <p>Zam wesell</p></a></div>
 
             <div class="poggle  card"><a href="#"><img
                         src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="">
-                </a><p>poogle</p></div>
+                <p>poogle</p></a></div>
 
             <div class="boba card"><a href="#"><img
                         src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="">
-                </a><p>boba fett</p></div>
+                <p>boba fett</p></a></div>
 
             <div class="jango card"><a href="#"><img
                         src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="">
-                </a><p>Jango</p></div>
+                <p>Jango</p></a></div>
 
             <div class="tawn card"><a href="#"><img
                         src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="">
-                <p>Tawn me</p</a>></div>
+                <p>Tawn me</p></a></div>
 
             <div class="dexter card"><a href="#"><img
                         src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="">
