--- a/views/characters/anakin_skywalker.html
+++ b/views/characters/anakin_skywalker.html
@@ -20,7 +20,7 @@
                         <p>Son éducation en tant que Jedi auprès d'<a href="obi-wan_kenobi.html">Obi-Wan Kenobi</a>, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'empereur<a href="palpatine.html"> Palpatine</a>, sa rédaption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p> 
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/anna_skywalker.webp" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
@@ -58,7 +58,7 @@
                 <div class="relations">
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
                     <p>Dans <a href="../movies/movie1.html">La Menace Fantôme</a> , Anakin est un enfant de petite taille aux cheveux courts et blonds (coupe au bol) et aux yeux bleus, pilote de module de courses. Il est esclave sur <a href="../planets/tatooine.html">Tatooine</a>. À la fin du film, il porte la coupe de cheveux (avec la tresse signifiant qu’il est apprenti) et les vêtements des Padawan. </p>
                     <p>Dans <a href="../movies/movie2.html">L'Attaque des clones</a>, il est devenu adulte et a donc considérablement grandi. Il mesure dans les 1,80 m et arbore toujours la coupe de cheveux des Padawans. Lors du duel final contre le <a href="../characters/compte_dooku.html">comte Dooku</a>, il se fait trancher l'avant-bras droit et est contraint de porter une prothèse mécanique.</p>
                     <p>Dans <a href="../movies/movie3.html">La Revanche des Sith</a>, il a considérablement laissé pousser ses cheveux et une cicatrice est présente sur sa tempe droite. Durant le massacre du <a href="../corporations/conseil_separatiste.html">Conseil Séparatiste</a>, ses yeux sont jaunes et injectés de sang, ce qui montre une forte emprise du côté obscur. Lorsqu'il perd son duel contre son ancien maître <a href="../characters/obi-wan_kenobi.html">Obi wan Kenobi</a>, à la fin de l'épisode III, il perd en même temps le dernier bras qui lui reste, ainsi que ses deux jambes. La colère et la rage déforment son visage avant que son corps ne soit presque entièrement brûlé par de la lave en fusion. Son corps sera désormais couvert de cicatrices et de traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.</p>
