--- a/views/characters/bail_organa.html
+++ b/views/characters/bail_organa.html
@@ -24,7 +24,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/characters/organa.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
@@ -64,7 +64,7 @@
 				<div class="relations">
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
-					<img src="" alt="" />
+					<img src="../../images/movies/poster1.jpg" alt="" />
 					<p>Bail Organa naquit sur Alderaan. Après un conflit qui fut réglé à l'aide du Maître Jedi Jorus C'baoth, il fut proclamé Vice-Roi de la planète. Il prit également les fonctions de sénateur en remplaçant Bail Antilles à ce poste.</p>
 					<p>Ardent défenseur de la démocratie et de la République, il fit partie du Comité Loyaliste lors de la Crise Séparatiste et soutint le Chancelier Suprême Palpatine. Il soutint également la motion du sénateur Binks afin d'attribuer les pleins pouvoirs au Chancelier à la veille de la guerre des clones. Néanmoins, il se rendit compte durant le conflit et grâce à l'aide de l'ex-chancelier <a href="../characters/finis_valorum.html">Finis Valorum</a>, que <a href="../characters/palpatine.html">Palpatine</a> était beaucoup moins bienveillant qu'il voulait bien le montrer et que ses méthodes laissaient pour le moins à désirer. Sa conviction fut renforcée lorsque <a href="../characters/palpatine.html">Palpatine</a> le "menaça gentiment" (selon Organa lui-même) et encore plus lorsque <a href="../characters/finis_valorum.html">Valorum</a> mourut lors de l'explosion d'un cargo permettant au Chancelier à la fois d'éliminer cette menace et de faire passer une loi pour renforcer la sécurité.</p>
 					<p>Lors du conflit, Organa se rapprocha des Jedi et de certains sénateurs comme Fang Zar, Padmé Amidala et surtout Mon Mothma, la sénatrice de Chandrila, future dirigeante de la rébellion. Bail Organa accueillit <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, les deux héros Jedi, après la bataille de <a href="../planets/coruscant.html">Coruscant</a>. Il se trouvait toujours sur <a href="../planets/coruscant.html">Coruscant</a> lorsque l'Ordre 66 fut donné et il se rendit au temple Jedi alors que les clones de la 501e légion le prenaient d'assaut sous le commandement de Dark Vador et de Appo. Il assista en direct au meurtre de Zett Jukassa et parvint à s'enfuir in extremis. Seul son statut de sénateur lui sauva la vie à ce moment. Il décida alors de partir à la recherche d'éventuels survivants <a href="../corporations/jedi.html">Jedi</a> pour leur porter secours et parvint à réunir <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et <a href="../characters/yoda.html">Yoda</a> à bord du Tantive IV. Il fut alors convoqué au Sénat pour une session extraordinaire où <a href="../characters/palpatine.html">Palpatine</a> annonça la fin de la République et le début de l'Empire ainsi que l'extermination des « traîtres » Jedi.</p>
