--- a/views/characters/chewbacca.html
+++ b/views/characters/chewbacca.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title></title>
+		<title>Chewbacca</title>
 	</head>
 	<body>
 		<header>
@@ -24,7 +24,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/characters/chewbacka.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
@@ -66,7 +66,7 @@
 				<div class="relations">
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
-					<img src="" alt="" />
+					<img src="../../images/movies/poster3.jpg" alt="" />
 					<p>
 						Chewbacca apparaît dans le 22e épisode de la troisième saison de la série Star Wars: <a href="../movies/movie2.html">L'Attaque des Clones</a>. Il a été enlevé et rejeté sur une planète forestière, pour y être chassé, par des chasseurs trandoshans aux côtés d'Ahsoka Tano et de deux autres jeunes <a href="../corporations/jedi.html">Jedi</a>, qui parviennent d'ailleurs à triompher de leurs poursuivants grâce à la grande force physique du Wookiee et grâce à l'émetteur construit par celui-ci afin de contacter <a href="../planets/kashyyk.html">Kashyyyk</a>. Les Wookiees vinrent secourir Chewbacca et les padawans. Ensuite, Chewbacca rencontre pour la première fois des Chevaliers Jedi (Plo Koon, <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>) pour leur ramener les padawans.
 					</p>
