--- a/views/characters/dark_maul.html
+++ b/views/characters/dark_maul.html
@@ -19,7 +19,7 @@
                         <p>Dark Maul, ou plus simplement Maul, Darth Maul dans la version originale en anglais et la traduction québécoise, est un personnage de fiction de l'univers de Star Wars qui apparaît dans les deux premiers épisodes de la <a href="../index.html">prélogie</a>: <a href="../movies/movie1.html">La Menace fantôme</a> et<a href="../movies/movie2.html">L'Attaque des Clones</a></p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/dark_maul.webp" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
@@ -59,7 +59,7 @@
                 <div class="relations">
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/characters/dark_maul.webp" alt="">
                     <p>Dans <a href="../movies/movie1.html">La menace fantome</a> <a href="../characters/dark_maul.html">Dark Maul</a> reçoit une nouvelle mission de la part de son maître. Après la fuite de la reine <a href="../characters/padme_amidala.html">Amidala</a> lors du conflit entre <a href="../planets/naboo.html">Naboo</a> et la <a href="../corporations/federation_du_commerce.html">Fédération du commerce</a>, et son sauvetage par <a href="../characters/qui_gon_jinn.html">Qui-Gon Jinn</a> et son padawan <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, <a href="../characters/palpatine.html">Sidious</a> le charge de retrouver sa trace et de la capturer. Dark Maul découvre qu'ils se sont réfugiés sur la planète <a href="../planets/tatooine.html">Tatooine</a>. Il intervient au moment où leur vaisseau est sur le point de décoller, attaquant férocement Qui-Gon, qui parvient à s'échapper. Quelque temps plus tard, devant l'incapacité des chefs neimodiens de la Fédération, Sidious l'envoie sur Naboo. Lors de la bataille de Naboo, il affronte en duel Qui-Gon et Obi-Wan. Il parvient à isoler les deux <a href="../corporations/jedi.html">Jedi</a> puis les séparer empêchant Obi-Wan de venir aider Qui-Gon qui se fera frapper mortellement. Arrogant et trop sûr de lui, il est finalement vaincu par Obi-Wan Kenobi, qui le coupe en deux au niveau de la taille d'un coup de sabre laser ; Dark Maul disparaît alors en tombant dans un puits.</p>
                     <p>Pendant la guerre des clones, Savage Opress, le jeune frère de Maul, apprend que celui-ci est toujours en vie. En -20, il se met à sa recherche et le retrouve sous une forme « araignée » (amaigri avec plusieurs implants droïdes en forme de patte d'araignée ainsi qu'avec les cornes allongées et brisé mentalement) sur la planète Lotho Minor.</p>
                 </div>
