--- a/views/characters/finis_valorum.html
+++ b/views/characters/finis_valorum.html
@@ -19,7 +19,7 @@
                         <p>Membre de la Maison Valorum et né sur la planète <a href="../planets/coruscant.html">Coruscant</a>, Finis Valorum était un descendant du tout premier Chancelier de la <a href="../corporations/republique_galactique.html">République Galactique</a>. Ce politicien très apprécié fut élu deux fois Chancelier Suprême.</p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/finis_valorum.jpg" alt="">
                         <table>
 							<tr>
 								<th>Apparaît dans : </th> 
@@ -59,7 +59,7 @@
                 <div class="relations">
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
 					<p>Durant son deuxième mandat, Valorum fit passer la proposition 31-814D, une loi taxant les routes commerciales. Cela attisa la colère de la <a href="../corporations/Federation_du_commerce.html">Fédération du commerce</a> qui mit en place le blocus de <a href="../planets/naboo.html">Naboo</a> pour s'opposer.</p>  
 					<p>Sachant que la majeure partie des sénateurs étaient acquis à la solde de l'organisation, il envoya en secret deux <a href="../corporations/jedi.html">Jedi</a>, <a href="../characters/qui_jon_ji.html">Qui-Gon Jinn</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> pour négocier avec <a href="../characters/nute_gunray.html">Nute Gunray</a>, le leader de la Fédération du commerce. Cependant, Valorum ignorait que le Neimoidien répondait aux ordres de <a href="../characters/palpatine.html">Dark Sidious</a>. Celui-ci ordonna la mort des Jedi. Cependant, ils parvinrent à survivre et à quitter la planète avec la Reine <a href="../characters/padme_amidala.html">Padmé Amidala</a>.</p>   
 					<p>Celle-ci se rendit au <a href="../corporations/senat_galactique.html">Sénat Galactique</a> pour protester ouvertement face à la Fédération du commerce, sur la demande de Valorum et de <a href="../characters/palpatine.html">Sheev Palpatine</a>, le sénateur de <a href="../planets/naboo.html">Naboo</a>. Malheureusement, Valorum se trouva impuissant lorsque Lott Dod, sénateur de la Fédération du commerce, riposta en demandant l'envoi d'une commission d'enquête, afin de paralyser ses opposants, et qu'il reçut le soutien d'influents sénateurs comme Aks Moe de Malastare. <a href="../characters/padme_amidala.html">Padmé Amidala</a> refusa et demanda un vote de défiance à l'encontre de Valorum. Celui-ci perdit alors son poste au profit de Palpatine.</p> 
