--- a/views/characters/general_grievous.html
+++ b/views/characters/general_grievous.html
@@ -22,7 +22,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/characters/Grievoushead.webp" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
@@ -62,7 +62,7 @@
 				<div class="relations">
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
-					<img src="" alt="" />
+					<img src="../../images/movies/poster2.jpg" alt="" />
 					<p>
 						En 19 av.BY, il décida de retrouver le tueur de <a href="../characters/padme_amidala.html">Padmé Amidala</a>, et de la venger. Il découvrit que le tueur était <a href="../characters/anakin_skywalker.html">Dark Vador</a>. Il réussit à savoir que le Seigneur <a href="../corporations/sith.html">Sith</a> cherchait le <a href="../corporations/jedi.html">Jedi</a> Jax
 						Pavan à tout prix, plus que les autres Jedi survivants. Il acheta une amulette, qui permettait de se dissimuler de la Force. Il prit contact, déguisé, avec Dark Vador, qui, comme prévu, ne
