--- a/views/characters/jango_fett.html
+++ b/views/characters/jango_fett.html
@@ -60,7 +60,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>Les origines du chasseur de primes Jango Fett ne sont pas connues1, et bien qu'il arbore une armure
                     mandalorienne, il n'a pas de lien avec Mandalorea 2,1.
                     Étant l'un des meilleurs chasseurs de primes de la Galaxie, sa réputation attire l’attention des
