--- a/views/characters/jar_jar_bink.html
+++ b/views/characters/jar_jar_bink.html
@@ -25,7 +25,7 @@
                         la chute de la République.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/jarjar-bink.jpg" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -67,7 +67,7 @@
             </div>
             <div class="relations">
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>Jar Jar Binks est un habitant de la planète Naboo. Il peut à la fois vivre sur terre et dans l'eau.
                     <br>
                     Qui-Gon Jinn est natif de Coruscant où il est recueilli très jeune par les Jedi1,2,5.
