--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -19,7 +19,7 @@
                         <p>Nute Gunray est un personnage de Star Wars créé pour la <a href="../index.html">deuxième trilogie</a> de la saga. Originaire de Cato Neimodia, ce neimodien est vice-roi de la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a> dans les films dans lesquels il apparaît.</p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/nute_gunray.webp" alt="">
                         <table>
 							<tr>
                                 <th>Apparaît dans : </th> 
@@ -59,7 +59,7 @@
                 <div class="relations">
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
 					<p>Dans <a href="../movies/movie1.html">La Menace fantôme</a>, il s'agit de l'antagoniste le plus présent. Il lance le blocus de <a href="../planets/naboo.html">Naboo</a>, guidé dans l'ombre par le <a href="../corporations/sith.html">Sith</a> <a href="../characters/palpatine.html">Dark Sidious</a> et temporairement secondé de l'apprenti du Sith, <a href="../characters/dark_maul.html">Dark Maul</a>. Il rejoint ensuite le <a href="../corporations/conseil_separatiste.html">Conseil séparatiste</a> du <a href="../characters/compte_dooku.html">comte Dooku</a>, le second apprenti de Dark Sidious, et assiste au commencement de la guerre des clones à Géonosis dans <a href="../movies/movie2.html">L'Attaque des clones</a>. Il est enfin tué dans <a href="../movies/movie3.html">La Revanche des Sith</a> à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, <a href="../characters/anakin_skywalker.html">Dark Vador</a>, est envoyé par son maître massacrer les dirigeants <a href="../corporations/conseil_separatiste.html">séparatistes</a>.</p>  
 					<p>Rôle dans le blocus de <a href="../planets/naboo.html">Naboo</a> : <br>
                         Vice-roi de la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a>, Nute Gunray est contacté par le mystérieux <a href="../corporations/sith.html">Sith</a> Dark Sidious (qui n'est autre que le sénateur <a href="../characters/palpatine.html">Palpatine</a> de Naboo) en 32 av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le blocus de Naboo illégalaent. Le neimodien envoie ensuite son armée envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo lorsqu'il apprend que le <a href="../corporations/senat_galactique.html">Sénat</a> décide de taxer les zones éloignées où la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a> s'enrichit. Lorsque des <a href="../corporations/jedi.html">Jedi</a> sont envoyés par la <a href="../corporations/republique_galactique.html">République</a> en ambassadeurs, Dark Sidious convainc Gunray de tenter de les tuer, mais il échoue.</p>   
