--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -24,7 +24,7 @@
                         talent particulier de pilote. </p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/hobi_wan.jpg" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -69,7 +69,7 @@
             </div>
             <div class="relations">
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>La prélogie, composée de <a>La Menace fantôme</a> (1999), <a>L'Attaque des clones</a> (2002) et <a>La
                         Revanche des Sith</a> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant
                     les raisons et les circonstances de sa transformation en personnage malfaisant.</p>
