--- a/views/characters/ki_adi_mundi.html
+++ b/views/characters/ki_adi_mundi.html
@@ -19,7 +19,7 @@
                         <p>Ki-Adi-Mundi est un personnage de fiction de la saga de Star Wars qui apparaît dans tous les épisodes de la prélogie. Ki-Adi-Mundi est interprété par Silas Carson, comme le vice-roi Nute Gunray de la même trilogie.</p> 
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/ki_di_mundi.webp" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
@@ -57,7 +57,7 @@
                 <div class="relations">
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
 					<p>Ki-Adi-Mundi est le padawan du Maître Jedi Yoda. Sa sagesse était légendaire. Seul chevalier nommé au Conseil Jedi, il devient maitre Jedi quelques années plus tard. Il devient ensuite lui-même, à l'instar d'un autre apprenti de Yoda nommé Mace Windu, mabre du conseil Jedi. Le praier sabre laser de Ki-Adi-Mundi affiche une lame de couleur violette.</p> 
                     <p>Ki-Adi-Mundi assiste au début de la guerre des clones. En effet, il fait partie des Jedi qui viennent porter secours à leurs collègues dans l'arène des exécutions, lors de la praière bataille de Géonosis. Il en survit et devient général de l'armée clone. Il commande dès lors les Marines galactiques.</p> 
                     <p>Le Jedi participe à la seconde bataille de Géonosis. Durant celle-ci, il surpasse Anakin Skywalker et son apprentie Ahsoka Tano en nombre de droïdes de combat séparatistes vaincus, sans être dans un praier taps au courant de la compétition entre les deux autres Jedi.</p>
