--- a/views/characters/mace_windu.html
+++ b/views/characters/mace_windu.html
@@ -19,7 +19,7 @@
                         <p>Mace Windu est un maître Jedi, personnage de la saga cinématographique Star Wars. Il est interprété au cinéma par Samuel L. Jackson dans <a>La Menace fantôme </a>, <a>L'Attaque des clones</a> et <a>La Revanche des Sith</a>.</p> 
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/mace_windu.jpg" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
@@ -57,7 +57,7 @@
                 <div class="relations">
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg" alt="">
 					<p>Dans les événements qui ont abouti à la bataille de Géonosis (<a>Attaque des clones</a> ), Mace Windu accompagna 200 Jedi chargés de secourir Obi-Wan Kenobi, sur le point d'être exécuté en compagnie d'Anakin Skywalker et de la Sénatrice Padmé Amidala sur ordre du Comte Dooku. </p> 
                     <p>Pendant la guerre des clones, Maître Windu fut l'un des grands généraux de l'armée de la République, en possédant une légion de 5 000 hommes et un commandant clone, du nom de commandant Ponds. Lors de la bataille de Ryloth, il arrêta Wat Tambor, qui retenait prisonniers les Twi'leks.</p> 
                     <p>Lors de la bataille de Coruscant, après le sauvetage du Chancelier Palpatine sur le vaisseau amiral du général Grievous (la Main Invisible), il apprend grâce à Anakin Skywalker que le Seigneur Noir des Sith, Dark Sidious, n'est autre que le Chancelier en personne. Pressé d'arrêter le Sith, le Maître Jedi se rend immédiatement à son bureau accompagné de trois Jedi seulement, Kit Fisto, Agen Kolar et Saesee Tiin.</p>
