--- a/views/characters/palpatine.html
+++ b/views/characters/palpatine.html
@@ -23,7 +23,7 @@
                         lui-même</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/empereur_palpatine.png" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -62,7 +62,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>
                     Sheev Palpatine, alias Dark Sidious, ou Darth Sidious dans la version originale et québécoise, est un
                     personnage de fiction, seigneur noir des <a href="../corporations/sith.html">Sith</a>, homme politique et antagoniste principal de la saga Star Wars créée par George Lucas. D'abord sénateur de <a href="../planets/naboo.html">Naboo</a>, Palpatine réussit à se faire élire Chancelier suprême de la <a href="../corporations/republique_galactique.html">galaxie</a>, avant de fomenter un coup d'état qui le voit devenir empereur de <a href="../corporations/empire_galactique.html">l'Empire galactique</a> pendant vingt-cinq ans.
