--- a/views/characters/panaka.html
+++ b/views/characters/panaka.html
@@ -29,7 +29,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/panaka.jpg" alt="" />
             <table>
               <tr>
                 <th>Apparait dans:</th>
@@ -72,7 +72,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Sous l'Empire Galactique, Panaka resta fidèle à l'Empereur
             <a href="../characters/palpatine.html">Sheev Palpatine</a> et devint
