--- a/views/characters/poggle_le_bref.html
+++ b/views/characters/poggle_le_bref.html
@@ -27,7 +27,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/poggle_bataille.jpg" alt="" />
             <table>
               <tr>
                 <th>Apparaît dans :</th>
@@ -69,7 +69,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Poggle a eu l'idée d'un coup d'État et a lancé un mouvement de
             résistance. Il a formé un groupe avec d'autres Lesser mécontents.
