--- a/views/characters/r2-d2.html
+++ b/views/characters/r2-d2.html
@@ -26,7 +26,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/R2d2.webp" alt="" />
             <table>
               <tr>
                 <th>Apparait dans:</th>
@@ -68,7 +68,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             R2-D2 se fait remarquer en sauvant le vaisseau de la reine
             <a href="../characters/padme_amidala.html">Padmé Amidala</a>, puis
