--- a/views/characters/padme_amidala.html
+++ b/views/characters/padme_amidala.html
@@ -23,7 +23,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/padme_admidala.webp" alt="" />
             <table>
               <tr>
                 <th>Apparaît dans :</th>
@@ -74,7 +74,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Dans <a href="../movies/movie1.html">La Menace fantôme</a> à l'âge
             de quatorze ans, Padmé devient démocratiquaent la souveraine du
