--- a/views/characters/qui_gon_jinn.html
+++ b/views/characters/qui_gon_jinn.html
@@ -23,7 +23,7 @@
                         </p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/characters/qui-gon_jinn.webp" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
@@ -63,7 +63,7 @@
                 <div class="relations">
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
+                    <img src="../../images/movies/poster1.jpg alt="">
                     <p>
                         La taxation des routes commerciales pousse la <a href="../corporations/federation_du_commerce.html">Fédération du commerce</a> a mettre en place un blocus de Naboo. Le
                         chancelier suprême <a href="../characters/finis_valorum.html">Valorum</a> envoie deux chevaliers Jedi, <a href="../characters/qui_gon_jinn.html">Qui-Gon Jinn</a> et son apprenti <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, pour
