--- a/views/characters/shmi_skywalker.html
+++ b/views/characters/shmi_skywalker.html
@@ -31,7 +31,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/shmi_skywalker.webp" alt="" />
             <table>
               <tr>
                 <th>Apparait dans:</th>
@@ -74,7 +74,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Shmi est une femme simple, aimante et douce. Elle porte des
             vêtements modestes faits d'étoffes grossières. Elle s'efforce
