--- a/views/characters/sio_bibble.html
+++ b/views/characters/sio_bibble.html
@@ -28,7 +28,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/sio_bibble.jpg" alt="" />
             <table>
               <tr>
                 <th>Apparait dans:</th>
@@ -70,7 +70,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Natif de <a href="../planets/naboo.html">Naboo</a>, Sio Bibble était
             un éminent philosophe qui devint Gouverneur de
