--- a/views/characters/tarrful.html
+++ b/views/characters/tarrful.html
@@ -25,7 +25,7 @@
                         bataille de <a href="../planets/kashyyk.html">Kashyyyk</a>.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="../characters/tarrful.html" alt="">
+                    <img src="../../images/characters/chewbacka.jpg" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -64,7 +64,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/characters/chewbacka.jpg" alt="">
                 <p>Tarfful et les Wookies prirent fait et cause pour la <a href="../corporations/republique_galactique.html">République</a>. Le conflit arriva très vite sur
                     <a href="../planets/kashyyk.html"><a href="../planets/kashyyk.html"><a href="../planets/kashyyk.html">Kashyyyk</a></a></a> et Tarfful dut se concentrer à la défense de sa
                     planète notamment contre les esclavagistes Trandoshans.
