--- a/views/characters/taun_we.html
+++ b/views/characters/taun_we.html
@@ -22,7 +22,7 @@
                         Clone au <a href="../corporations/jedi.html">Jedi</a> <a href="../characters/obi-wan_kenobi.html">Obi-wan Kenobi</a> dans l'Episode II.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="">
+                    <img src="../../images/characters/tawn_me.jpg" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
@@ -61,7 +61,7 @@
             <div class="relations">
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
-                <img src="" alt="">
+                <img src="../../images/movies/poster1.jpg" alt="">
                 <p>Cette assistante ministérielle coordonne le projet de la Grande Armée de la République. Ayant étudié
                     la psychologie humaine, elle veilla à la stabilité mentale des clones.</p>
                 
