--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -24,7 +24,7 @@
 					</p>
 				</div>
 				<div class="presentoir">
-					<img src="" alt="" />
+					<img src="../../images/characters/yoda.webp" alt="" />
 					<table>
 						<tr>
 							<th>Apparaît dans :</th>
@@ -63,7 +63,7 @@
 			</div>
 			<div class="relations">
 				<h2>Rôle dans l'histoire</h2>
-				<img src="" alt="" />
+				<img src="../../images/movies/poster2.jpg" alt="" />
 				<p>
 					On y apprend le rôle important de Yoda au Conseil Jedi. Quand des jeunes padawans commencent les
 					premières étapes de la formation <a href="../corporations/jedi.html">Jedi</a>, ils le font avec les conseils avertis de Yoda.
