--- a/views/characters/zam_wesell.html
+++ b/views/characters/zam_wesell.html
@@ -33,7 +33,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/zam_wesell.jpg" alt="" />
             <table>
               <tr>
                 <th>Apparaît dans :</th>
@@ -73,7 +73,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster2.jpg" alt="" />
           <p>
             Malgré l'aversion que portait la population de Zolan au métier de
             chasseur de primes, Zam Wesell décida très tôt que ce serait la voie
