--- a/views/characters/watto.html
+++ b/views/characters/watto.html
@@ -24,7 +24,7 @@
             </p>
           </div>
           <div class="presentoir">
-            <img src="" alt="" />
+            <img src="../../images/characters/watto.jpg" alt="" />
             <table>
               <tr>
                 <th>Apparait dans:</th>
@@ -69,7 +69,7 @@
         <div class="relations">
           <hr />
           <h2>Rôle dans l'histoire</h2>
-          <img src="" alt="" />
+          <img src="../../images/movies/poster1.jpg" alt="" />
           <p>
             Avant d'arriver sur <a href="../planets/tatooine.html">Tatooine</a>,
             Watto était un soldat de Toydaria. Mais après avoir été blessé au
