--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -1,104 +1,140 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obi-wan kenobi</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='../../css/styles.css'>
-</head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../../css/styles.css"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <iframe src="../header.html" frameborder="0"></iframe>
+      <iframe src="../header.html" frameborder="0"></iframe>
     </header>
     <main>
-        <div class="container">
-            <div class="presentation">
-                <div class="histoire">
-                    <h1>Obi-wan Kenobi</h1>
-                    <p>Obi-Wan Kenobi est un homme humain d'une hauteur de 1,79 m puis de 1,82 m. Il porte généralement
-                        une toge de Jedi. Il est réputé notamment pour sa maîtrise du sabre laser exceptionnelle et
-                        surtout son talent en négociation. Il n'apprécie pas le pilotage mais témoigne tout de même d'un
-                        talent particulier de pilote. </p>
-                </div>
-                <div class="presentoir">
-                    <img src="../../images/characters/hobi_wan.jpg" alt="">
-                    <table>
-                        <tr>
-                            <th>Apparaît dans : </th>
-                            <td><a>La Menace fantôme</a></td>
-                            <td><a> La guerre des clones</a></td>
-                            <td><a>l'héritage</a> </td>
-                        </tr>
-                        <tr>
-                            <th>Première apparition :</th>
-                            <td><em>Un Nouvel espoir</em></td>
-                        </tr>
-                        <tr>
-                            <th>Affiliations :</th>
-                            <td>
-                                ordre jedi
-                            </td>
-
-                        </tr>
-                        <tr>
-                            <th>Race :</th>
-                            <td>Humain</td>
-                        </tr>
-                        <tr>
-                            <th>Genre :</th>
-                            <td>Masculin</td>
-                        </tr>
-                        <tr>
-                            <th>Planète d'origine :</th>
-                            <td>Stewjon</td>
-                        </tr>
-                        <tr>
-                            <th>Métier :</th>
-                            <td>Ordre jedi</td>
-
-                        </tr>
-                        <tr>
-                            <th>Côté de la force :</th>
-                            <td>Côté lumineux</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="relations">
-                <h2>Rôle dans l'histoire</h2>
-                <img src="../../images/movies/poster1.jpg" alt="">
-                <p>La prélogie, composée de <a>La Menace fantôme</a> (1999), <a>L'Attaque des clones</a> (2002) et <a>La
-                        Revanche des Sith</a> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant
-                    les raisons et les circonstances de sa transformation en personnage malfaisant.</p>
-                <p>Son éducation en tant que Jedi auprès d'Obi-Wan Kenobi, son basculement du côté obscur de la Force
-                    pour devenir l'apprenti et le bras armé de l'empereur Palpatine, sa rédemption finale lui permettant
-                    d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il
-                    soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux
-                    premières trilogies.</p>
-                <p>Dans La Menace Fantôme, Anakin est un enfant de petite taille aux cheveux courts et blonds (coupe au
-                    bol) et aux yeux bleus, pilote de module de courses. Il est esclave sur Tatooine. À la fin du film,
-                    il porte la coupe de cheveux (avec la tresse signifiant qu’il est apprenti) et les vêtements des
-                    Padawan. </p>
-                <p>Dans L'Attaque des clones, il est devenu adulte et a donc considérablement grandi. Il mesure dans les
-                    1,80 m et arbore toujours la coupe de cheveux des Padawans. Lors du duel final contre le comte
-                    Dooku, il se fait trancher l'avant-bras droit et est contraint de porter une prothèse mécanique.</p>
-                <p>Dans La Revanche des Sith, il a considérablement laissé pousser ses cheveux et une cicatrice est
-                    présente sur sa tempe droite. Durant le massacre du Conseil Séparatiste, ses yeux sont jaunes et
-                    injectés de sang, ce qui montre une forte emprise du Côté Obscur. Lorsqu'il perd son duel contre son
-                    ancien maître Obi wan Kenobi, à la fin de l'épisode III, il perd en même temps le dernier bras qui
-                    lui reste, ainsi que ses deux jambes. La colère et la rage déforment son visage avant que son corps
-                    ne soit presque entièrement brûlé par de la lave en fusion. Son corps sera désormais couvert de
-                    cicatrices et de traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de
-                    survie qu'il occupera jusqu'à la fin de sa vie.</p>
-            </div>
+      <div class="container">
+        <div class="presentation">
+          <div class="histoire">
+            <h1>Obi-wan Kenobi</h1>
+            <p>
+              Obi-Wan Kenobi est un homme humain d'une hauteur de 1,79 m puis de
+              1,82 m. Il porte généralement une toge de
+              <a href="../corporations/jedi.html">Jedi</a>. Il est réputé
+              notamment pour sa maîtrise du sabre laser exceptionnelle et
+              surtout son talent en négociation. Il n'apprécie pas le pilotage
+              mais témoigne tout de même d'un talent particulier de pilote.
+            </p>
+          </div>
+          <div class="presentoir">
+            <img src="../../images/characters/hobi_wan.jpg" alt="" />
+            <table>
+              <tr>
+                <th>Apparaît dans :</th>
+                <td><a href="../movies/movie1.html">La Menace Fantôme</a></td>
+              </tr>
+              <tr>
+                <th>Première apparition :</th>
+                <td>Un Nouvel espoir</td>
+              </tr>
+              <tr>
+                <th>Affiliations :</th>
+                <td>Ordre <a href="../corporations/jedi.html">Jedi</a></td>
+              </tr>
+              <tr>
+                <th>Race :</th>
+                <td>Humain</td>
+              </tr>
+              <tr>
+                <th>Genre :</th>
+                <td>Masculin</td>
+              </tr>
+              <tr>
+                <th>Planète d'origine :</th>
+                <td>Stewjon</td>
+              </tr>
+              <tr>
+                <th>Métier :</th>
+                <td>Ordre <a href="../corporations/jedi.html">Jedi</a></td>
+              </tr>
+              <tr>
+                <th>Côté de la force :</th>
+                <td>Côté lumineux</td>
+              </tr>
+            </table>
+          </div>
         </div>
+        <div class="relations">
+          <h2>Rôle dans l'histoire</h2>
+          <img src="../../images/movies/poster1.jpg" alt="" />
+          <p>
+            La prélogie, composée de
+            <a href="../movies/movie1.html">La Menace fantôme</a> (1999),
+            <a href="../movies/movie2.html">L'Attaque des clones</a> (2002) et
+            <a href="../movies/movie3.html">La Revanche des Sith</a> (2005),
+            explore l'enfance et la jeunesse d'<a
+              href="../characters/anakin_skywalker.html"
+              >Anakin Skywalker</a
+            >, détaillant les raisons et les circonstances de sa transformation
+            en personnage malfaisant.
+          </p>
+          <p>
+            Son éducation en tant que
+            <a href="../corporations/jedi.html">Jedi</a> auprès d'<a
+              href="../characters/obi-wan_kenobi.html"
+              >Obi-Wan Kenobi</a
+            >, son basculement du côté obscur de la Force pour devenir
+            l'apprenti et le bras armé de l'empereur
+            <a href="../characters/palpatine.html">Palpatine</a>, sa rédemption
+            finale lui permettant d'accomplir sa destinée — ramener l'équilibre
+            dans la Force et éliminer les
+            <a href="../corporations/sith.html">Sith</a> — et le fait qu'il soit
+            le père des jumeaux Luke Skywalker et Leia Organa, constituent
+            l'intrigue principale des deux premières trilogies.
+          </p>
+          <p>
+            Dans <a href="../movies/movie1.html">La Menace Fantôme</a>,
+            <a href="../characters/anakin_skywalker.html">Anakin</a> est un
+            enfant de petite taille aux cheveux courts et blonds (coupe au bol)
+            et aux yeux bleus, pilote de module de courses. Il est esclave sur
+            <a href="../planets/tatooine.html">Tatooine</a>. À la fin du film,
+            il porte la coupe de cheveux (avec la tresse signifiant qu’il est
+            apprenti) et les vêtements des Padawan.
+          </p>
+          <p>
+            Dans <a href="../movies/movie2.html">L'Attaque des clones</a>, il
+            est devenu adulte et a donc considérablement grandi. Il mesure dans
+            les 1,80 m et arbore toujours la coupe de cheveux des Padawans. Lors
+            du duel final contre le comte
+            <a href="../characters/compte_dooku.html">Dooku</a>, il se fait
+            trancher l'avant-bras droit et est contraint de porter une prothèse
+            mécanique.
+          </p>
+          <p>
+            Dans <a href="../movies/movie3.html">La Revanche des Sith</a>, il a
+            considérablement laissé pousser ses cheveux et une cicatrice est
+            présente sur sa tempe droite. Durant le massacre du Conseil
+            Séparatiste, ses yeux sont jaunes et injectés de sang, ce qui montre
+            une forte emprise du Côté Obscur. Lorsqu'il perd son duel contre son
+            ancien maître
+            <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, à la
+            fin de l'épisode III, il perd en même temps le dernier bras qui lui
+            reste, ainsi que ses deux jambes. La colère et la rage déforment son
+            visage avant que son corps ne soit presque entièrement brûlé par de
+            la lave en fusion. Son corps sera désormais couvert de cicatrices et
+            de traces de brûlures et pour survivre, Anakin sera enfermé dans une
+            sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.
+          </p>
+        </div>
+      </div>
     </main>
     <footer>
-        <iframe src="../footer.html" frameborder="0"></iframe>
+      <iframe src="../footer.html" frameborder="0"></iframe>
     </footer>
-</body>
-
+  </body>
 </html>
