--- a/views/corporations/haut_conseil_gungan.html
+++ b/views/corporations/haut_conseil_gungan.html
@@ -23,7 +23,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/corporations/haut_conseil_gungan.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
