--- a/views/corporations/jedi.html
+++ b/views/corporations/jedi.html
@@ -30,7 +30,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/corporations/jedi.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
