--- a/views/corporations/cartel_hutt.html
+++ b/views/corporations/cartel_hutt.html
@@ -26,7 +26,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/corporations/cartelhutt.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
