--- a/views/corporations/conseil_separatiste.html
+++ b/views/corporations/conseil_separatiste.html
@@ -25,7 +25,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/corporations/conseil_separatiste.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
