--- a/views/footer.html
+++ b/views/footer.html
@@ -6,10 +6,10 @@
 	<body>
 		<footer>
 			<div class="pied">
-				<a href="">Films</a>
-				<a href="">Personnages</a>
-				<a href="">Planètes</a>
-				<a href="">Corporations</a>
+				<a href="../views/movies/index.html">Films</a>
+				<a href="../views/characters/index.html">Personnages</a>
+				<a href="../views/planets/index.html">Planètes</a>
+				<a href="../views/corporations/index.html">Corporations</a>
 				<a href="">Contact</a>
 			</div>
 			<div class="credit">
