--- a/views/header.html
+++ b/views/header.html
@@ -6,11 +6,11 @@
 <body>
     <header>
         <div class="gauche">
-            <a href=""><img src="../images/logo.png" width="100px" height="50px" /></a>
-            <a href="">Films</a>
-            <a href="">Personnages</a>
-            <a href="">Planètes</a>
-            <a href="">Corporations</a>
+            <a href="../views/index.html"><img src="../images/logo.png" width="100px" height="50px" /></a>
+            <a href="../views/index.html">Films</a>
+				<a href="../views/characters/index.html">Personnages</a>
+				<a href="../views/planets/index.html">Planètes</a>
+				<a href="../views/corporations/index.html">Corporations</a>
             <a href="">Contact</a>
         </div>
         <div class="droite">
