--- a/views/characters/mace_windu.html
+++ b/views/characters/mace_windu.html
@@ -23,10 +23,10 @@
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
-                                <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a></td>
+                                <td><a href="../movies/movie1.html">La Menace Fantôme</a> , <a href="../movies/movie2.html">L'Attaque des Clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a></td>
                             </tr>
-                                <th>Praière apparition :</th>
-                                <td>La Menace fantôme </td>
+                                <th>Première apparition :</th>
+                                <td><a href="../movies/movie1.html">La Menace Fantôme</a> </td>
                             <tr>
                                 <th>Affiliations :</th>
                                 <td><a href="../corporations/jedi.html">Ordre Jedi</a>/ <a href="../corporations/republique_galactique.html">République galactique</a></td>
@@ -45,7 +45,7 @@
                             </tr>
                             <tr>
                                 <th>Métier :</th>
-                                <td>Maître Jedi</td> 
+                                <td>Maître <a href="../corporations/jedi.html">Jedi</a></td> 
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
@@ -66,7 +66,7 @@
                     </p> 
                     <p>
                         Lors de la bataille de <a href="../planets/coruscant.html">Coruscant</a>, après le sauvetage du Chancelier <a href="palpatine.html">Palpatine</a> sur le vaisseau amiral du général <a href="general_grievous.html">Grievous</a> (la Main Invisible), il apprend grâce à <a href="anakin_skywalker.html">Anakin Skywalker</a> que le Seigneur Noir des <a href="../corporations/sith.html">Sith</a>, <a href="palpatine.html">Dark Sidious</a>, n'est autre que le Chancelier en personne. Pressé d'arrêter le Sith, le Maître Jedi se rend immédiatement à son bureau accompagné de trois Jedi seulement, Kit Fisto, Agen Kolar et Saesee Tiin.</p>
-                    
+                </div>    
 			</div>
 		</main>
 		<footer>
