MM anakin bail proofreading

--- a/views/characters/anakin_skywalker.html
+++ b/views/characters/anakin_skywalker.html
@@ -17,7 +17,7 @@
 					<div class="histoire">
                         <h1>Anakin Skywalker</h1>
                         <p>La prélogie, composée de <a href="../movies/movie1.html">La Menace fantôme</a> (1999), <a href="../movies/movie2.html">L'Attaque des clones</a> (2002) et <a href="../movies/movie3.html">La Revanche des Sith</a> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant les raisons et les circonstances de sa transformation en personnage malfaisant.</p> 
-                        <p>Son éducation en tant que Jedi auprès d'<a href="obi-wan_kenobi.html">Obi-Wan Kenobi</a>, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'empereur<a href="palpatine.html"> Palpatine</a>, sa rédaption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p> 
+                        <p>Son éducation en tant que Jedi auprès d'<a href="obi-wan_kenobi.html">Obi-Wan Kenobi</a>, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'empereur<a href="palpatine.html"> Palpatine</a>, sa rédemption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="../../images/characters/anna_skywalker.webp" alt="">
@@ -50,7 +50,7 @@
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
-                                <td>Côté lumineux, puis obscur</td>
+                                <td>Lumineux, puis obscur</td>
                             </tr>
 						</table>
                     </div>
