--- a/views/characters/bail_organa.html
+++ b/views/characters/bail_organa.html
@@ -18,8 +18,8 @@
 						<h1>Bail Organa</h1>
 						<p>
 							Bail Organa est un personnage de Star Wars. Sénateur à <a href="../planets/coruscant.html">Coruscant</a> de la planète Alderaan, il apparaît dans Star Wars, épisode II : <a href="../movies/movie2.html">L'Attaque des clones</a> , Star Wars, épisode III : <a href="../movies/movie3.html"> La Revanche des Sith</a>,
-							Rogue One: A Star Wars Story et Obi-Wan Kenobi. C'est un pionnier de la rébellion qui a été mabre de la délégation des 2000. Après l'Ordre 66, il vient en aide aux
-							Jedi <a href="../characters/yoda.html">Yoda</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et assiste avec eux à la naissance des jumeaux Luke Skywalker et celle qu'il va adopter avec sa femme : Leia Organa, qui le raplacera plus tard au Sénat
+							Rogue One: A Star Wars Story et Obi-Wan Kenobi. C'est un pionnier de la rébellion qui a été membre de la délégation des 2000. Après l'Ordre 66 (protocole qui amena les soldats clones à considérer les Jedi comme des traîtres et les tuer à vue), il vient en aide aux
+							Jedi <a href="../characters/yoda.html">Yoda</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et assiste avec eux à la naissance des jumeaux Luke Skywalker et celle qu'il va adopter avec sa femme : Leia Organa, qui le remplacera plus tard au Sénat
 							impérial.
 						</p>
 					</div>
@@ -40,7 +40,7 @@
 							</tr>
 							<tr>
 								<th>Race :</th>
-								<td>Humain</td>
+								<td>Être humain</td>
 							</tr>
 							<tr>
 								<th>Genre :</th>
@@ -56,7 +56,7 @@
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Côté clignotant</td>
+								<td>Lumineux</td>
 							</tr>
 						</table>
 					</div>
