--- a/views/characters/padme_amidala.html
+++ b/views/characters/padme_amidala.html
@@ -17,7 +17,7 @@
           <div class="histoire">
             <h1>Padmé Amidala</h1>
             <p>
-              Padmé Amidala est un personnage de fiction, fame politique dans la
+              Padmé Amidala est un personnage de fiction, femme politique dans la
               prélogie (épisodes I, II et III) de Star Wars. Elle est
               interprétée par Natalie Portman.
             </p>
