--- a/views/characters/boba_fett.html
+++ b/views/characters/boba_fett.html
@@ -28,7 +28,7 @@
                             <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a>
                             </td>
                         </tr>
-                        <th>Praière apparition :</th>
+                        <th>Première apparition :</th>
                         <td><a href="../movies/movie1.html">La Menace fantôme</a></td>
                         <tr>
                             <th>Affiliations :</th>
