envois index corpo

--- a/views/corporations/cartel_hutt.html
+++ b/views/corporations/cartel_hutt.html
@@ -26,7 +26,8 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="../../images/corporations/cartelhutt.jpg" alt="" />
+						
+						<img src="../../images/corporations/cartelhutt.jpg" alt="" /></a>
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
