--- a/views/footer.html
+++ b/views/footer.html
@@ -6,11 +6,11 @@
 	<body>
 		<footer>
 			<div class="pied">
-				<a href="../views/movies/index.html">Films</a>
-				<a href="../views/characters/index.html">Personnages</a>
-				<a href="../views/planets/index.html">Planètes</a>
-				<a href="../views/corporations/index.html">Corporations</a>
-				<a href="">Contact</a>
+				<a href="movies/index.html">Films</a>
+				<a href="characters/index.html">Personnages</a>
+				<a href="planets/index.html">Planètes</a>
+				<a href="corporations/index.html">Corporations</a>
+				<a href="forms/contact.html">Contact</a>
 			</div>
 			<div class="credit">
 				<p>@ 2022 MEVY - Created with passion</p>
