--- a/views/header.html
+++ b/views/header.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <link rel="stylesheet" href="../css/header.css">
-</head>
-<body>
-    <header>
-        <div class="gauche">
-            <a href="../views/index.html"><img src="../images/logo.png" width="100px" height="50px" /></a>
-            <a href="../views/index.html">Films</a>
-				<a href="../views/characters/index.html">Personnages</a>
-				<a href="../views/planets/index.html">Planètes</a>
-				<a href="../views/corporations/index.html">Corporations</a>
-            <a href="">Contact</a>
-        </div>
-        <div class="droite">
-            <input type="button" class="bouton" value="Inscription" href="" />
-            <input type="button" class="bouton" value="Connexion" href="" />
-        </div>
-    </header>
-    
-</body>
+	<head>
+		<link rel="stylesheet" href="../css/header.css" />
+	</head>
+	<body>
+		<header>
+			<div class="gauche">
+				<a href="index.html" target="_parent"><img src="../images/logo.png" width="100px" height="50px" /></a>
+				<a href="index.html" target="_parent">Films</a>
+				<a href="characters/index.html" target="_parent">Personnages</a>
+				<a href="planets/index.html" target="_parent">Planètes</a>
+				<a href="corporations/index.html" target="_parent">Corporations</a>
+				<a href="forms/contact.html">Contact</a>
+			</div>
+			<div class="droite">
+				<input type="button" class="bouton" value="Inscription" href="forms/inscription.html" />
+				<input type="button" class="bouton" value="Connexion" href="forms/connexion.html"  />
+			</div>
+		</header>
+	</body>
 </html>
